# plonky2_bn254

./: Cargo.toml  README.md  output.txt
src/: builder.rs  hook.rs  lib.rs
src/curves/: g1.rs  g2.rs
src/fields/: biguint.rs  fq.rs  fq2.rs  inv.rs  mod.rs  recover.rs  sgn.rs
src/generators/: mod.rs  to_u16.rs
src/generators/fq/: mod.rs  single.rs  stark_proof.rs
src/generators/g1/: mod.rs  random.rs  single.rs  stark_proof.rs
src/generators/g2/: mod.rs  random.rs  single.rs  stark_proof.rs
src/starks/: mod.rs  utils.rs
src/starks/common/: eq.rs  mod.rs  prover.rs  round_flags.rs  utils.rs  verifier.rs
src/starks/curves/: mod.rs
src/starks/curves/common/: eq.rs  mod.rs  utils.rs
src/starks/curves/g1/: add.rs  mod.rs  scalar_mul_ctl.rs  scalar_mul_stark.rs  scalar_mul_view.rs
src/starks/curves/g2/: add.rs  mod.rs  range_check_target.rs  scalar_mul_ctl.rs  scalar_mul_stark.rs  scalar_mul_view.rs
src/starks/curves/g2/ext/: add.rs  convert.rs  is_modulus_zero.rs  mod.rs  modulus_zero.rs  mul.rs  sub.rs
src/starks/fields/: exp_ctl.rs  exp_stark.rs  exp_view.rs  mod.rs  mul.rs
src/starks/modular/: addcy.rs  is_modulus_zero.rs  is_zero.rs  mod.rs  modular_zero.rs  modulus_zero.rs  pol_utils.rs  utils.rs
src/utils/: g1_msm.rs  hash_to_g2.rs  mod.rs
