[package]
name = "plonky2_bn254"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plonky2 = { git="https://github.com/InternetMaximalism/polygon-plonky2.git", branch="intmax2-dev"}
starky = { git="https://github.com/InternetMaximalism/polygon-plonky2.git", branch="intmax2-dev"}
plonky2_u32={git="https://github.com/InternetMaximalism/plonky2-u32.git", branch="intmax2-dev"}
hex = "0.4.3"
rand = "0.8.5"
anyhow = "1.0.82"
itertools = "0.12.1"
hashbrown = "0.14.5"
env_logger = "0.11.3"
log = "0.4.21"
num = "0.4.3"
num-bigint = "0.4.5"
ark-bn254 = "0.4.0"
ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-std = "0.4.0"

[features]
not-constrain-bn254-stark = []